maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:31: error: not found: value xMax
    if (x+1<=xMax) {             //au sud,
             ^ShortestPathMaze:33: error: not found: value ecritIndication
        case false => ecritIndication(x+1, y, cnt+1)
                      ^ShortestPathMaze:39: error: not found: value ymax
    if (y+1<=ymax) {             //et à l'est.
             ^